# bytecon

./: Cargo.toml  README.md  bench.sh  test.sh  test_all_features.sh
benches/: bincode_bench.rs
src/: avian3d.rs  base.rs  bevy.rs  bincode.rs  burn.rs  burn_dtype.rs  glam.rs  lib.rs  rand.rs  rustls.rs  tokio.rs
tests/: all_features.rs  bevy_tests.rs  byte_converter_tests.rs
