[package]
name = "bytecon"
version = "0.1.12"
edition = "2021"
authors = ["Austin Heller"]
description = "A trait for easily converting to-and-from an array of bytes."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/bytecon"
license = "MIT OR Apache-2.0"
keywords = ["encoding", "trait", "serialization", "networking", "streaming"]
categories = ["encoding"]

[features]
default = []
burn = ["dep:burn"]
burn_dtype = ["dep:burn"]
tokio = ["dep:tokio", "dep:tokio-rustls", "dep:rustls"]
bincode = ["dep:bincode", "dep:serde"]
rand = ["dep:rand", "dep:rand_chacha"]

[dependencies]
thiserror = { version = "2" }
paste = { version = "1" }
burn = { version = "0.14", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-rustls = { version = "0.23", optional = true }
rustls = { version = "0.21", optional = true }
bincode = { version = "1", optional = true }
serde = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }