[package]
name = "bytecon"
version = "0.5.6"
edition = "2021"
authors = ["Austin Heller"]
description = "A trait for easily converting to-and-from an array of bytes."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/bytecon"
license = "MIT OR Apache-2.0"
keywords = ["encoding", "trait", "serialization", "networking", "streaming"]
categories = ["encoding"]

[features]
default = ["base"]
avian3d = ["dep:avian3d"]
base = []
burn = ["dep:burn"]
burn_dtype = ["dep:burn"]
tokio = ["dep:tokio", "dep:tokio-rustls"]
bincode = []
rand = ["dep:rand", "dep:rand_chacha"]
rustls = ["dep:rustls"]
bevy = ["dep:bevy", "glam", "dep:scoped-tls-hkt"]
glam = ["dep:glam"]

[dependencies]
avian3d = { version = "0.3", features = ["serialize"], optional = true }
bevy = { version = "0.16", features = ["serialize"], optional = true }
bincode = { version = "1" }
burn = { version = "0.14", optional = true }
glam = { version = "0.29.3", optional = true }
paste = { version = "1" }
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
rustls = { version = "0.21", optional = true }
scoped-tls-hkt = { version = "0.1.5", optional = true }
serde = { version = "1" }
thiserror = { version = "2" }
tokio = { version = "1", features = ["full"], optional = true }
tokio-rustls = { version = "0.23", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "bincode_bench"
harness = false